--- a/css/_seeUs.scss
+++ b/css/_seeUs.scss
@@ -2,14 +2,14 @@
     padding: 2em 0 5em 0;line-height: 1.5 ;
     .container{
         h2{
-            font-size: 70px;font-weight: bolder;color: #CE6D28;padding-bottom: 30px;
+            font-size: 35px;font-weight: bolder;color: #CE6D28;padding-bottom: 30px;
         }
         .row{
             .col-md-6{
                 .inner{
-                    width: 630px;height: 484px;position: relative;
+                    width: 90%;height: auto;position: relative;
                     img{
-                        position: absolute;width: 30%;height: 70vh;position: absolute;z-index: -1;
+                        position: absolute;width: 30%;height: 120%;position: absolute;z-index: -1;
                         right: -20px;top: -20px;
                     }
                     video{ 
@@ -17,9 +17,9 @@
                     }
                 }
                 .inner2{
-                    padding-top: 10em;padding-left: 40px;
+                    padding-top: 5em;padding-left: 40px;
                   h3{
-                      font-size: 45px;font-weight: bolder;color: #313492;
+                      font-size: 35px;;font-weight: bolder;color: #313492;
                       padding-bottom: 20px;
                       span{
                           display: block;
@@ -31,6 +31,133 @@
                           display: block;
                       }
                   }
+                }
+            }
+        }
+    }
+}
+
+
+
+@media screen and(min-width:768px) {
+ 
+    .seeus{
+        padding: 2em 0 5em 0;line-height: 1.5 ;
+        .container{
+            h2{
+                font-size: 40px;font-weight: bolder;color: #CE6D28;padding-bottom: 30px;
+            }
+            .row{
+                .col-md-6{
+                    .inner{
+                        width: 100%;height: auto;position: relative;
+                        img{
+                            position: absolute;width: 40%;height: 40vh;position: absolute;z-index: -1;
+                            right: -20px;top: 55px;
+                        }
+                        video{ 
+                         width: 100%;height: 100%; 
+                        }
+                    }
+                    .inner2{
+                        padding-top: 2em;padding-left: 40px;
+                      h3{
+                          font-size: 45px;font-weight: bolder;color: #313492;
+                          padding-bottom: 20px;
+                          span{
+                              display: block;
+                          }
+                      }
+                      p{
+                          font-size: 18px;color: #CE6D28;
+                          span{
+                              display: block;
+                          }
+                      }
+                    }
+                }
+            }
+        }
+    }
+}
+
+
+
+@media screen and(min-width:1024px) {
+    .seeus{
+     
+        .container{
+        
+            .row{
+                .col-md-6{
+                    .inner{
+                        width: 100% !important;
+                        img{
+                            position: absolute;width: 30%;height: 60vh !important;position: absolute;z-index: -1;
+                            right: -20px;top: 50px !important;
+                        }
+                        video{ 
+                         width: 100%;height: 100%; 
+                        }
+                    }
+                    .inner2{
+                        padding-top: 10em;padding-left: 40px;
+                      h3{
+                          font-size: 45px;font-weight: bolder;color: #313492;
+                          padding-bottom: 20px;
+                          span{
+                              display: block;
+                          }
+                      }
+                      p{
+                          font-size: 18px;color: #CE6D28;
+                          span{
+                              display: block;
+                          }
+                      }
+                    }
+                }
+            }
+        }
+    }
+}
+
+
+@media screen and(min-width:992px) {
+    .seeus{
+        padding: 2em 0 5em 0;line-height: 1.5 ;
+        .container{
+            h2{
+                font-size: 35px;font-weight: bolder;color: #CE6D28;padding-bottom: 30px;
+            }
+            .row{
+                .col-md-6{
+                    .inner{
+                        width: 630px;height: 484px;position: relative;
+                        img{
+                            position: absolute;width: 30%;height: 70vh;position: absolute;z-index: -1;
+                            right: -20px;top: -20px;
+                        }
+                        video{ 
+                         width: 100%;height: 100%; 
+                        }
+                    }
+                    .inner2{
+                        padding-top: 10em;padding-left: 40px;
+                      h3{
+                          font-size: 45px;font-weight: bolder;color: #313492;
+                          padding-bottom: 20px;
+                          span{
+                              display: block;
+                          }
+                      }
+                      p{
+                          font-size: 18px;color: #CE6D28;
+                          span{
+                              display: block;
+                          }
+                      }
+                    }
                 }
             }
         }
